--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "lena-diaz-novels",
   "private": true,
+  "homepage": "https://blackbolt001.github.io/LenaDiazBooks/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.4",
+    "gh-pages": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
